# MIMUW-SIK2021-BIG

./: .gitignore  CMakeLists.txt  ClientManager.cpp  ClientManager.h  ClientState.cpp  ClientState.h  StreamBuffer.cpp  StreamBuffer.h  client-main.cpp  client-state.h  constants.h  makefile  server-main.cpp  util.cpp  util.h
client/: ClientManager.cpp  ClientManager.h  ClientState.cpp  ClientState.h  Event.cpp  Event.h  QueueDispatcher.cpp  QueueDispatcher.h  StreamBuffer.cpp  StreamBuffer.h  client-main.cpp
server/: Datagram.cpp  Datagram.h  Event.h  GameState.cpp  GameState.h  PLayerState.cpp  PLayerState.h  Parser.cpp  Parser.h  ServerManager.cpp  ServerManager.h  server-main.cpp
server/Events/: Event.cpp  Event.h  GameOverEvent.h  NewGameEvent.cpp  NewGameEvent.h  PixelEvent.cpp  PixelEvent.h  PlayerEliminatedEvent.cpp  PlayerEliminatedEvent.h
server/People/: PLayerState.cpp  PLayerState.h  Person.cpp  Person.h  PlayerState.cpp  PlayerState.h
util/: CRC.cpp  CRC.h  Random.cpp  Random.h  constants.h  err.cpp  err.h  util.cpp  util.h
